# fastapi.tiangolo.com-tutorial-path-params-numeric-validations

./: README.md  pyproject.toml
path_params_numeric_validations/: main.py
